--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,10 +1,10 @@
-$primary-color: #f6c100;
-$secondary-color: #437bf9;
+$primary-color: #437bf9;
+$secondary-color: #213C7A;
 
-$primary-color-shade: #F7D14A;
+$primary-color-shade: #8FAFFB;
 
 $off-white: #fffff4;
 $off-black: #414a4c;
 
-$border-radius: 20px;
+$border-radius: 10px;
 $base-spacing: 10px;
