--- a/src/components/TodoList/TodoList.module.scss
+++ b/src/components/TodoList/TodoList.module.scss
@@ -1,10 +1,48 @@
+@import "../../variables.scss";
+
 .todoList {
-    border: 2px red solid;
+    border: 2px solid #ADFA2A;
+    border-radius: $border-radius;
+    overflow: hidden;
 
     h2 {
+        height: 20%;
         text-transform: uppercase;
         text-align: center;
         letter-spacing: 2px;
-        background-color: greenyellow;
+        
+        
+    }
+
+    > p {
+        height: 50%;
+    }
+
+    div {
+        height: 10%;
+        width: 100%;
+
+        p {
+            display: inline-block;
+            width: 50%;
+            height: 100%;
+        }
+    }
+
+    button {
+        height: 20%;
+        width: 100%;
+    }
+}
+
+.red {
+    h2 {
+        background-color: red;
+    }
+}
+
+.amber {
+    h2 {
+        background-color: yellow;
     }
 }
