--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,10 +1,21 @@
-$primary-color: #437bf9;
-$secondary-color: #213C7A;
+$primary-blue:#8FAFFB;
+$secondary-blue: #213C7A;
 
-$primary-color-shade: #8FAFFB;
+$primary-blue-shade: #d7fffe;
+$primary-blue-trans: hsla(179, 100%, 92%, 0.5);
+$secondary-color: #213C7A;
 
 $off-white: #fffff4;
 $off-black: #414a4c;
 
 $border-radius: 10px;
 $base-spacing: 10px;
+
+$primary-green: #cafb76;
+$secondary-green:#637a3a;
+
+$primary-yellow: #FBEC69;
+$secondary-yellow: #7A7333;
+
+$primary-red: #FA056E;
+$secondary-red: #AD0C51;
