--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,3 +1,5 @@
+@import "./variables.scss";
+
 * {
   margin: 0;
   padding: 0;
@@ -10,4 +12,5 @@
   grid-gap: 50px;
   padding: 50px;
   grid-template-rows: repeat(3, minmax(250px, auto));
+  background-image: linear-gradient($primary-blue-trans, $secondary-blue), url(./assets/imgs/hip-square.png);
 }
