--- a/src/components/TodoList/TodoList.module.scss
+++ b/src/components/TodoList/TodoList.module.scss
@@ -1,48 +1,124 @@
 @import "../../variables.scss";
 
 .todoList {
-    border: 2px solid #ADFA2A;
-    border-radius: $border-radius;
-    overflow: hidden;
+  border: 2px solid $secondary-green;
+  border-radius: $border-radius;
+  overflow: hidden;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: $off-white;
 
-    h2 {
-        height: 20%;
-        text-transform: uppercase;
-        text-align: center;
-        letter-spacing: 2px;
-        
-        
+  h2 {
+    height: 20%;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    background-color: $primary-green;
+    color: $secondary-green;
+    padding: 0 $base-spacing;
+    font-weight: 350;
+    display: flex;
+    align-items: center;
+    font-size: 18px;
+  }
+
+  > p {
+    height: 50%;
+    border-top: 1px solid $secondary-green;
+    border-bottom: 1px solid $secondary-green;
+    padding: $base-spacing;
+  }
+
+  div {
+    width: 100%;
+    display: flex;
+
+    p {
+      padding: $base-spacing;
+      display: inline-block;
+      width: 50%;
+      height: 100%;
+      font-size: 14px;
+
+      &:first-child {
+        background-color: $primary-green;
+      }
     }
+  }
 
-    > p {
-        height: 50%;
+  button {
+    height: 20%;
+    width: 100%;
+    text-transform: uppercase;
+    background: none;
+    border: none;
+    color: $secondary-green;
+    border-top: 1px solid $secondary-green;
+    transition: background-color 0.8s;
+
+    &:hover {
+      background-color: $primary-green;
+      cursor: pointer;
     }
-
-    div {
-        height: 10%;
-        width: 100%;
-
-        p {
-            display: inline-block;
-            width: 50%;
-            height: 100%;
-        }
-    }
-
-    button {
-        height: 20%;
-        width: 100%;
-    }
+  }
 }
 
 .red {
+    color: $secondary-red;
+    border: 2px solid $secondary-red;
     h2 {
-        background-color: red;
+      background-color: $primary-red;
+      color: $secondary-red;
+    }
+  
+    > p {
+      border-top: 1px solid $secondary-red;
+      border-bottom: 1px solid $secondary-red;
+    }
+  
+    div {
+      p {
+        &:first-child {
+          background: $primary-red;
+        }
+      }
+    }
+    button {
+      color: $secondary-red;
+      border-top: 1px solid $secondary-red;
+  
+      &:hover {
+          background: $primary-red;
+      }
     }
 }
 
-.amber {
-    h2 {
-        background-color: yellow;
+.yellow {
+  color: $secondary-yellow;
+  border: 2px solid $secondary-yellow;
+  h2 {
+    background-color: $primary-yellow;
+    color: $secondary-yellow;
+  }
+
+  > p {
+    border-top: 1px solid $secondary-yellow;
+    border-bottom: 1px solid $secondary-yellow;
+  }
+
+  div {
+    p {
+      &:first-child {
+        background: $primary-yellow;
+      }
     }
+  }
+  button {
+    color: $secondary-yellow;
+    border-top: 1px solid $secondary-yellow;
+
+    &:hover {
+        background: $primary-yellow;
+    }
+  }
 }
