current date added

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -17,5 +17,5 @@ $secondary-green:#637a3a;
 $primary-yellow: #FBEC69;
 $secondary-yellow: #7A7333;
 
-$primary-red: #FA056E;
-$secondary-red: #AD0C51;
+$primary-red: #FA0C00;
+$secondary-red: #7A0236;
