--- a/src/components/TodoList/TodoList.module.scss
+++ b/src/components/TodoList/TodoList.module.scss
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   background-color: $off-white;
+  color: $secondary-green;
 
   h2 {
     height: 20%;
