--- a/src/variables.scss
+++ b/src/variables.scss
@@ -8,6 +8,9 @@ $secondary-color: #213C7A;
 $off-white: #fffff4;
 $off-black: #414a4c;
 
+$off-black-trans: #424b4dcc;
+$off-white-trans: #fffff41e;
+
 $border-radius: 10px;
 $base-spacing: 10px;
 
