--- a/src/containers/DashBoard/DashBoard.module.scss
+++ b/src/containers/DashBoard/DashBoard.module.scss
@@ -4,7 +4,6 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 50px;
-    padding: 50px;
+    padding: 20vh 50px;
     grid-template-rows: repeat(3, minmax(250px, auto));
-    background-image: linear-gradient($primary-blue-trans, $secondary-blue), url(../../assets/imgs/hip-square.png);
   }
