--- a/src/containers/NavBar/NavBar.module.scss
+++ b/src/containers/NavBar/NavBar.module.scss
@@ -1,40 +1,91 @@
 @import "../../variables.scss";
 
 .navBar {
+  
   width: 100%;
   height: 10vh;
   position: fixed;
   background-color: $off-white;
   color: $off-black;
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  z-index: 1;
-  padding: 0 $base-spacing * 5;
+  align-items: center;
+  z-index: 2;
+  padding: $base-spacing $base-spacing * 5;
   border-radius: 0 0 $border-radius $border-radius;
-  border: 1px solid $off-black;
+  border: 2px solid $off-black;
   border-top: none;
 
-  div {
-      height: 100%;
-      display: flex;
-      align-items: center;
+  > div {
+    width: 40%;
+    display: flex;
+    align-items: center;
 
     h1 {
-      display: inline-block;
+      letter-spacing: 2px;
     }
 
     div {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        margin-left: $base-spacing*2;
+      display: flex;
+      flex-direction: column;
+      margin-left: $base-spacing * 5;
 
-        p{
-        &:first-child {
-            border-bottom: 1px solid $off-black;
-        }
-    }
+      p {
+        transition: content .2s;
+      }
     }
   }
+}
+
+.navBtn {
+  position: fixed;
+  margin-left: 50px;
+  margin-top: 10vh;
+  padding: $base-spacing $base-spacing * 2;
+  background-color: $off-black;
+  border: none;
+  border-radius: 0 0 $border-radius $border-radius;
+  font-weight: bold;
+  color: $off-white;
+  z-index: 2;
+  border: 1px solid $off-white;
+  border-top: none;
+
+  &:hover {
+    cursor: pointer;
+    background-color: $off-white;
+    color: $off-black;
+  }
+}
+
+.inputModal {
+  background-color: $off-black-trans;
+  position: fixed;
+  height: 100vh;
+  width: 100%;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  div {
+    height: 40%;
+    width: 40%;
+  }
+}
+
+.changingWord {
+  opacity: .8;
+  color: $primary-red;
+}
+.changingWord:after {
+  content:" ";
+  animation: spin 5s ease-in-out infinite;
+}
+
+@keyframes spin {
+  from   {content: "Down.";
+  }
+  to  {content:"Done.";
+    }
 }
