--- a/src/containers/Completed/Completed.module.scss
+++ b/src/containers/Completed/Completed.module.scss
@@ -4,8 +4,22 @@
     height: 100vh;
     width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     color: red;
     font-size: 50px;
+    padding: 50px;
+
+    div {
+        width: 100%;
+        display: grid;
+        grid-gap: 10px;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+
+        p{
+            background-color: #fff;
+            border: 2px solid green;
+        }
+    }
 }
