--- a/src/containers/Completed/Completed.module.scss
+++ b/src/containers/Completed/Completed.module.scss
@@ -7,23 +7,43 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-size: 50px;
   padding: 50px;
 
-  button {
-    width: 10%;
-  }
-  h2 {
-    background-color: $off-black-trans;
-    width: 80%;
-    text-align: center;
-    color: $off-white;
+  >div {
+    width: 100%;
+    display: flex;
+    border-radius: $border-radius $border-radius 0 0;
+    overflow: hidden;
     border: 2px solid $off-black;
     border-bottom: none;
-    border-radius: $border-radius $border-radius 0 0;
+    
+    button {
+      height: 100%;
+      display: inline-block;
+      width: 10%;
+      background-color: $off-black-trans;
+      border: none;
+      font-size: 40px;
+      color: $off-white;
+      cursor: pointer;
+      &:hover {
+        background-color: $off-black;
+      }
+    }
+    h2 {
+      display: inline-block;
+      background-color: $off-black-trans;
+      width: 80%;
+      font-size: 50px;
+      text-align: center;
+      color: $off-white;
+      
+      
+      
+    }
   }
 
-  > div {
+   .calendar {
     border: 2px solid $off-black;
     border-radius: 0 0 $border-radius $border-radius;
     overflow: hidden;
