--- a/src/containers/NavBar/NavBar.module.scss
+++ b/src/containers/NavBar/NavBar.module.scss
@@ -32,8 +32,15 @@
 
       p {
         transition: content .2s;
+        font-weight: bold;
       }
     }
+  }
+  .link {
+    color: $off-black;
+    font-weight: bold;
+    text-decoration: none;
+    letter-spacing: 1.2px;
   }
 }
 
