--- a/src/variables.scss
+++ b/src/variables.scss
@@ -2,8 +2,8 @@ $primary-blue:#8FAFFB;
 $secondary-blue: #213C7A;
 
 $primary-blue-shade: #d7fffe;
-$primary-blue-trans: hsla(179, 100%, 92%, 0.5);
-$secondary-color: #213C7A;
+$primary-blue-trans: #d6fffe80;
+$secondary-blue-trans: rgba(33, 60, 122, 0.5);
 
 $off-white: #fffff4;
 $off-black: #414a4c;
@@ -20,5 +20,5 @@ $secondary-green:#637a3a;
 $primary-yellow: #FBEC69;
 $secondary-yellow: #7A7333;
 
-$primary-red: #FA0C00;
+$primary-red: #FB544B;
 $secondary-red: #7A0236;
