added landing page

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -7,7 +7,7 @@
 }
 
 body{
-    background-image: linear-gradient($off-white-trans, $off-black-trans), url(./assets/imgs/hip-square.png);
+    background-image:  url(./assets/imgs/hip-square.png);
 }
 
 button {
