--- a/src/containers/NavBar/NavBar.module.scss
+++ b/src/containers/NavBar/NavBar.module.scss
@@ -1,53 +1,57 @@
 @import "../../variables.scss";
 
 .navBar {
-  
   width: 100%;
   height: 10vh;
   position: fixed;
-  background-color: $off-white;
-  color: $off-black;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   z-index: 2;
-  padding: $base-spacing $base-spacing * 5;
-  border-radius: 0 0 $border-radius $border-radius;
-  border: 2px solid $off-black;
-  border-top: none;
+  padding: 0 50px;
 
-  > div {
-    width: 40%;
+  .navBarContainer {
+    width: 100%;
+    height: 100%;
+    background-color: $off-white;
+    color: $off-black;
     display: flex;
+    justify-content: space-between;
     align-items: center;
+    padding: $base-spacing;
+    border-radius: 0 0 $border-radius $border-radius;
+    border: 2px solid $off-black;
+    border-top: none;
 
-    h1 {
-      letter-spacing: 2px;
-    }
-
-    div {
+    > div {
+      width: 40%;
       display: flex;
-      flex-direction: column;
-      margin-left: $base-spacing * 5;
+      align-items: center;
 
-      p {
-        transition: content .2s;
-        font-weight: bold;
+      h1 {
+        letter-spacing: 2px;
+      }
+
+      div {
+        display: flex;
+        flex-direction: column;
+        margin-left: $base-spacing * 5;
+
+        p {
+          transition: content 0.2s;
+          font-weight: bold;
+        }
       }
     }
-  }
-  .link {
-    color: $off-black;
-    font-weight: bold;
-    text-decoration: none;
-    letter-spacing: 1.2px;
+    .link {
+      color: $off-black;
+      font-weight: bold;
+      text-decoration: none;
+      letter-spacing: 1.2px;
+    }
   }
 }
-
 .navBtn {
   position: fixed;
-  margin-left: 50px;
-  margin-top: 10vh;
+  left: 80px;
+  top: 10vh;
   padding: $base-spacing $base-spacing * 2;
   background-color: $off-black;
   border: none;
@@ -82,17 +86,19 @@
 }
 
 .changingWord {
-  opacity: .8;
+  opacity: 0.8;
   color: $primary-red;
 }
 .changingWord:after {
-  content:" ";
+  content: " ";
   animation: spin 5s ease-in-out infinite;
 }
 
 @keyframes spin {
-  from   {content: "Down.";
+  from {
+    content: "Down.";
   }
-  to  {content:"Done.";
-    }
+  to {
+    content: "Done.";
+  }
 }
