--- a/src/components/TodoList/TodoList.module.scss
+++ b/src/components/TodoList/TodoList.module.scss
@@ -28,6 +28,7 @@
     border-top: 1px solid $secondary-green;
     border-bottom: 1px solid $secondary-green;
     padding: $base-spacing;
+    overflow-wrap: break-word;
   }
 
   div {
