--- a/src/containers/DashBoard/DashBoard.module.scss
+++ b/src/containers/DashBoard/DashBoard.module.scss
@@ -5,5 +5,5 @@
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 50px;
     padding: 20vh 50px;
-    grid-template-rows: repeat(3, minmax(250px, auto));
+    grid-template-rows: minmax(250px, auto);
   }
