--- a/src/components/CalendarItemTile/CalendarItemTile.module.scss
+++ b/src/components/CalendarItemTile/CalendarItemTile.module.scss
@@ -6,6 +6,34 @@
   color: $off-black;
 
   p {
+    font-size: 12px;
+    text-transform: uppercase;
+    padding: $base-spacing/2;
+
+    &:first-child {
+      padding-bottom: 0;
+    }
+  }
+
+  .completedTitle {
+   border: 1px solid $secondary-green;
+    background-color: $primary-green;
+    border-radius: $border-radius;
+    margin: $base-spacing/2 0;
+    text-align: center;
+    font-size: 12px;
+  }
+}
+
+
+@media only screen and (min-width: 764px) {
+  
+.itemTile {
+  background-color: $off-white;
+  height: 100%;
+  color: $off-black;
+
+  p {
     
     text-transform: uppercase;
     padding: $base-spacing;
@@ -23,3 +51,8 @@
     text-align: center;
   }
 }
+}
+@media only screen and (min-width: 1024px) {
+  
+}
+
