--- a/src/components/TodoList/TodoList.module.scss
+++ b/src/components/TodoList/TodoList.module.scss
@@ -5,6 +5,7 @@
   border-radius: $border-radius;
   overflow: hidden;
   height: 100%;
+  min-height: 250px;
   display: flex;
   flex-direction: column;
   background-color: $off-white;
