--- a/src/containers/LandingPage/LandingPage.module.scss
+++ b/src/containers/LandingPage/LandingPage.module.scss
@@ -1,16 +1,18 @@
 @import "../../variables.scss";
 
 .landingPage {
+  position: relative;
   height: 100vh;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: linear-gradient( $off-white-trans, $primary-blue-trans);
+  z-index: 2;
+  background-color: $off-black;
 
   > div {
-    width: 25%;
-    height: 50%;
+    width: 90%;
+    height: 80%;
     border: 2px solid $off-black;
     border-radius: $border-radius;
     overflow: hidden;
@@ -18,7 +20,7 @@
 
     h2 {
       height: 25%;
-      padding: $base-spacing;
+      padding: $base-spacing * 2 $base-spacing;
       text-align: center;
       font-size: 40px;
       background-color: $primary-green;
@@ -33,9 +35,9 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      border-top: 1px solid $off-black;
-      border-bottom: 1px solid $off-black;
-      
+      border-top: 3px solid $off-black;
+      border-bottom: 3px solid $off-black;
+
       p {
         font-size: 40px;
       }
@@ -45,7 +47,7 @@
       width: 100%;
       height: 25%;
       background-color: $primary-yellow;
-      padding: $base-spacing*2;
+      padding: $base-spacing * 2;
       font-size: 20px;
 
       &:hover {
@@ -69,6 +71,57 @@
     }
     to {
       content: "Done...";
+    }
+  }
+}
+
+@media only screen and (min-width: 764px) {
+  .landingPage {
+    > div {
+      width: 50%;
+      height: 75%;
+
+      h2 {
+        height: 25%;
+
+        font-size: 50px;
+
+        width: 100%;
+      }
+
+      div {
+        height: 50%;
+        width: 100%;
+
+        p {
+          font-size: 50px;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .landingPage {
+    > div {
+      width: 25%;
+      height: 50%;
+
+      h2 {
+        height: 25%;
+        padding: $base-spacing;
+        font-size: 40px;
+        width: 100%;
+      }
+
+      div {
+        height: 50%;
+        width: 100%;
+
+        p {
+          font-size: 40px;
+        }
+      }
     }
   }
 }
