--- a/src/containers/NavBar/NavBar.module.scss
+++ b/src/containers/NavBar/NavBar.module.scss
@@ -5,7 +5,6 @@
   height: 10vh;
   position: fixed;
   z-index: 2;
-  padding: 0 50px;
 
   .navBarContainer {
     width: 100%;
@@ -15,21 +14,21 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 $base-spacing * 3;
+    padding: 0 $base-spacing;
     border-radius: 0 0 $border-radius $border-radius;
     border: 2px solid $off-black;
     border-top: none;
 
     h1 {
       letter-spacing: 2px;
-      font-size: 35px;
+      font-size: 25px;
     }
     span {
       color: $primary-red;
     }
 
     .icon {
-      font-size: 25px;
+      font-size: 20px;
       color: $off-black-trans;
       &:hover {
         color: $primary-red;
@@ -41,13 +40,16 @@
     width: 100%;
     position: fixed;
     display: flex;
-    padding: 0 30px;
+    padding: 0 10px;
 
     .navBtn {
+      margin-right: 10px;
       background-color: $primary-blue;
       color: $secondary-blue;
       border: 2px solid $secondary-blue;
-      margin-right: 10px;
+      span {
+        display: none;
+      }
       &:hover {
         cursor: pointer;
         background-color: $primary-blue-shade;
@@ -64,7 +66,7 @@
       z-index: 2;
       border-top: none;
       letter-spacing: 1.2px;
-      font-size: 15px;
+      font-size: 12px;
     }
 
     .link {
@@ -79,7 +81,7 @@
       &:last-child {
         border-right: 2px solid $off-black;
         border-left: none;
-        border-radius: 0 0  $border-radius 0;
+        border-radius: 0 0 $border-radius 0;
       }
 
       &:hover {
@@ -103,13 +105,65 @@
   position: fixed;
   height: 100vh;
   width: 100%;
+  padding-top: 15vh;
   z-index: 1;
   display: flex;
   justify-content: center;
   align-items: center;
 
   div {
-    height: 40%;
-    width: 40%;
+    height: 80%;
+    width: 90%;
   }
 }
+
+@media only screen and (min-width: 764px) {
+  .navBar {
+    padding: 0 50px;
+
+    .navBarContainer {
+      padding: 0 $base-spacing * 3;
+
+      h1 {
+        font-size: 35px;
+      }
+      span {
+        color: $primary-red;
+      }
+
+      .icon {
+        font-size: 25px;
+      }
+    }
+    .navBarSubContainer {
+      padding: 0 30px;
+
+      .navBtn {
+        margin-right: 10px;
+      }
+
+      .navBtn,
+      .link {
+        font-size: 15px;
+      }
+
+    }
+  }
+  .inputModal {
+    padding: 0;
+    background-color: $off-black-trans;
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    div {
+      height: 50%;
+      width: 30%;
+    }
+  }
+}
+
